# vktt-sams-wedding

./: .gitignore  README.md
docs/: agent_mesh_architecture.pptx  broker_topics.html  broker_topics.md
wedding-photo-sharing/: .env.example  README.md  package-lock.json  package.json
wedding-photo-sharing/backend/: .env.example  README.md  package.json
wedding-photo-sharing/backend/src/: index.ts
wedding-photo-sharing/backend/src/__tests__/: guestStore.test.ts  statusRoute.test.ts  validation.test.ts
wedding-photo-sharing/backend/src/config/: index.ts
wedding-photo-sharing/backend/src/middleware/: upload.ts  validation.ts
wedding-photo-sharing/backend/src/routes/: admin.ts  guests.ts  photos.ts  status.ts
wedding-photo-sharing/backend/src/services/: imageUtils.ts  notificationService.ts  rekognitionService.ts  s3Service.ts  solaceService.ts  urlShortenerService.ts
wedding-photo-sharing/backend/src/store/: guestStore.ts
wedding-photo-sharing/backend/src/types/: index.ts
wedding-photo-sharing/deploy/: .env.template  README.md  bootstrap.sh  ecosystem.config.cjs
wedding-photo-sharing/deploy/nginx/: wedding.conf
wedding-photo-sharing/docs/: aws-iam-policy.json  demo-script.md  presentation-script.md  slides.md
wedding-photo-sharing/email-worker/: .env.example  README.md  package.json
wedding-photo-sharing/email-worker/src/: config.ts  emailService.ts  index.ts  types.ts
wedding-photo-sharing/frontend/: README.md  index.html  package.json  vite.config.ts
wedding-photo-sharing/frontend/src/: App.tsx  index.css
wedding-photo-sharing/frontend/src/components/: GuestCard.tsx  PhotoDropzone.tsx  StatusBadge.tsx
wedding-photo-sharing/frontend/src/pages/: AdminPage.tsx  GuestPage.tsx
wedding-photo-sharing/frontend/src/services/: api.ts
wedding-photo-sharing/frontend/src/types/: index.ts
wedding-planning/: README.md  line_tools.py
wedding-planning/catering-agent/: README.md  config.yaml  pyproject.toml
wedding-planning/catering-agent/src/catering_agent/: caterers.csv  og_tools.py  tools.py
wedding-planning/configs/agents/: catering-agent.yaml  decorator-agent.yaml  email-agent.yaml  main_orchestrator.yaml  photo-agent.yaml  wedding-venue-agent.yaml
wedding-planning/configs/gateways/: event_mesh_gateway.yaml
wedding-planning/dashboard/: wedding_dashboard.html
wedding-planning/decorator-agent/: README.md  config.yaml  pyproject.toml
wedding-planning/decorator-agent/src/decorator_agent/: decorators.csv  og_tools.py  tools.py
wedding-planning/email-agent/: README.md  config.yaml  pyproject.toml
wedding-planning/email-agent/src/email_agent/: og_tools.py  tools.py
wedding-planning/photo-agent/: README.md  config.yaml  pyproject.toml
wedding-planning/photo-agent/src/photo_agent/: og_tools.py  photographers.csv  tools.py
wedding-planning/wedding-venue-agent/: README.md  config.yaml  pyproject.toml
wedding-planning/wedding-venue-agent/src/wedding_venue_agent/: tools.py  venues.csv
