[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.catering_agent.metadata]
type = "agent"

[project]
name = "catering_agent"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A SAM plugin: catering agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Add plugin-specific dependencies here
]

[tool.hatch.build.targets.wheel]
packages = ["src/catering_agent"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/catering_agent" = "catering_agent/"
"config.yaml" = "catering_agent/config.yaml"
"README.md" = "catering_agent/README.md"
"pyproject.toml" = "catering_agent/pyproject.toml"
