[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.decorator_agent.metadata]
type = "agent"

[project]
name = "decorator_agent"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A SAM plugin: decorator agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Add plugin-specific dependencies here
]

[tool.hatch.build.targets.wheel]
packages = ["src/decorator_agent"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/decorator_agent" = "decorator_agent/"
"config.yaml" = "decorator_agent/config.yaml"
"README.md" = "decorator_agent/README.md"
"pyproject.toml" = "decorator_agent/pyproject.toml"
