[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.email_agent.metadata]
type = "agent"

[project]
name = "email_agent"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A SAM plugin: email agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Add plugin-specific dependencies here
]

[tool.hatch.build.targets.wheel]
packages = ["src/email_agent"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/email_agent" = "email_agent/"
"config.yaml" = "email_agent/config.yaml"
"README.md" = "email_agent/README.md"
"pyproject.toml" = "email_agent/pyproject.toml"
