[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.photo_agent.metadata]
type = "agent"

[project]
name = "photo_agent"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A SAM plugin: photo agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Add plugin-specific dependencies here
]

[tool.hatch.build.targets.wheel]
packages = ["src/photo_agent"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/photo_agent" = "photo_agent/"
"config.yaml" = "photo_agent/config.yaml"
"README.md" = "photo_agent/README.md"
"pyproject.toml" = "photo_agent/pyproject.toml"
