[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.wedding_venue_agent.metadata]
type = "agent"

[project]
name = "wedding_venue_agent"
version = "0.1.0"
authors = [
  { name="K", email="your.email@example.com" },
]
description = "A SAM plugin: wedding venue agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Add plugin-specific dependencies here
]

[tool.hatch.build.targets.wheel]
packages = ["src/wedding_venue_agent"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/wedding_venue_agent" = "wedding_venue_agent/"
"config.yaml" = "wedding_venue_agent/config.yaml"
"README.md" = "wedding_venue_agent/README.md"
"pyproject.toml" = "wedding_venue_agent/pyproject.toml"
